@@ -1,5 +1,10 @@
 2011-01-17  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* Makefile (SHLIB_LDFLAGS): New.
+	(build-shlib): Use it.
+
+2011-01-17  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* Makefile: Update compile rules.
 
 2011-01-16  H.J. Lu  <hongjiu.lu@intel.com>
